--- a/client/css/style.css
+++ b/client/css/style.css
@@ -547,3 +547,8 @@ li {
 .nano .content      { padding: 10px; }
 .nano .pane         { background: #444; }
 .nano .pane .slider { background: #111; }
+
+
+body, html {
+    overflow: hidden;
+}
